@startuml

title __MONGO's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.client {
    namespace mongo {
      class gr.ds.unipi.noda.api.client.mongo.MongoDBBuilderFactory {
          + Builder()
          + Builder()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.client {
    namespace mongo {
      class gr.ds.unipi.noda.api.client.mongo.MongoDBSystem {
          + getDefaultPort()
          {static} + initialize()
          # getConnector()
          - MongoDBSystem()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.client {
    namespace mongo {
      class gr.ds.unipi.noda.api.client.mongo.MongoDBSystem.Builder {
          - mongoClientOptions : MongoClientOptions
          - mongoCredential : MongoCredential
          + Builder()
          + Builder()
          + build()
          + mongoClientOptions()
          # self()
      }
    }
  }
  

  gr.ds.unipi.noda.api.client.mongo.MongoDBSystem -up-|> gr.ds.unipi.noda.api.client.NoSqlDbSystem
  gr.ds.unipi.noda.api.client.mongo.MongoDBSystem o-- gr.ds.unipi.noda.api.mongo.MongoDBConnector : connector
  gr.ds.unipi.noda.api.client.mongo.MongoDBSystem +-down- gr.ds.unipi.noda.api.client.mongo.MongoDBSystem.Builder
  gr.ds.unipi.noda.api.client.mongo.MongoDBSystem.Builder -up-|> gr.ds.unipi.noda.api.client.NoSqlDbSystem.Builder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
